@@ -22,18 +22,18 @@ Mateusz Zalega:
 	board/board-nitrokey-start.h
 
 NIIBE Yutaka:
-    Write the library:
+    Wrote the library:
 	chopstx.c, entry.c, eventflag.c,
         chopstx.h, eventflag.h
-    Write the drivers mcu/*:
+    Wrote the drivers mcu/*:
     	clk_gpio_init-mkl27z.c, clk_gpio_init-stm32.c,
 	sys-stm32f103.c, sys-stm32f030.c, sys-mkl27z.c,
 	adc-stm32f103.c, adc-mkl27z.c
-    Draw the logo:
+    Drew the logo:
 	chopstx.svg, chopstx.png
-    Write examples:
+    Wrote examples:
         example-led, example-cdc, example-fsm-55, example-fs-bb48
-    Write board/*:
+    Wrote board/*:
         board-fst-01.h, board-fst-01-00.h,
 	board-olimex-stm32-h103.h, board-stm8s-discovery.h
 	board-cq-starm.h, board-stbee-mini.h, board-stbee.h,
@@ -41,3 +41,7 @@ NIIBE Yutaka:
 	board-stm32f0-discovery.h, board-fsm-55.h,
 
 	board-fs-bb48.h
+
+Szczepan Zalega:
+    Modified Nitrokey-Start support.
+	board/board-nitrokey-start.h
